2011-08-27 Roman
- FIX:TCntrNode: User API object function nodeAt() is fixed for separated address process.
- FIX:TFunction: Modify flag set for "Object" type is fixed.
- FIX:UI.VCAEngine: Object type attributes process is fixed.
- FIX:UI.Vision: Selection clear on set no present value into items is fixed for "List" view of primitive "FormEl".
- DAQ: Object type DAQ value display is added to OpenSCADA control interface, for now usable only for
    UI.VCAEngine attributes.


2011-08-26 Roman
- SYS: ZLib check is added and SQLite check is changed into configure build system script.
- SYS: Disable pthread_setaffinity() and policy SCHED_BATCH is added for GLibC version < 2.5


2011-08-25 Roman
- !!!!:UI.VCAEngine: Object type to widget's attributes suport is added. Mostly object attributes pointed for use
    into a widget script for data store and interaction on a session time.


2011-08-22 Roman
- UI.QTCfg: Force "StyledPanel" border enable for Text and Table widgets for user's resize allow.


2011-08-21 Roman
- FIX:DAQ.Template: Remove template function's doubled IO, on the template enable, is added.
- FIX:DAQ: Check archives to attribute's address for prevent doubled for values archives is added.


2011-08-18 Roman
- FIX:UI.Vision: Mouse release event pass on run for primitive "ElFigure" is fixed.
- FIX:SYS.DAQ: Messages creation is added for compile errors for user API function funcCall();
- FIX:UI.VCAEngine: No project's page attributes "pgOpen" and "pgNoOpenProc" restore after reenable is fixed.
    Only project's pages and Widgets of libraries include to list for a parent widget select.
- FIX:UI.Vision, UI.WebVision: Minimum for "Diagram" primitive's time size is set to 1ms.


2011-08-17 Roman
- XMLNode: Prevent new line doubled on save node by XMLNode::BrOpenPrev.
- UI.VCAEngine, UI.Vision: To primitive "ElFigure" for modes "Line and Text edit" new attribute "confirm" is added for
    confirm on edit disabling allow.


2011-08-16 Roman