@@ -62,7 +62,7 @@ class MTable : public TTable
 	//Private methods
 	void postDisable(int flag);
 	void fieldFix( TConfig &cfg );
-	void fieldPrmSet( TCfg &cfg, const string &last, string &req );
+	void fieldPrmSet( TCfg &cfg, const string &last, string &req, int keyCnt = 1 );
 
 	string getVal( TCfg &cfg );
 	void   setVal( TCfg &cfg, const string &vl );
